// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button base 1`] = `
<button
  class="t-button t-button--type-default t--size-m"
>
  <span>
    foo bar
  </span>
</button>
`;

exports[`Button disabled 1`] = `
<button
  class="t-button t-button--type-default t--size-m"
  disabled=""
>
  <span>
    foo bar
  </span>
</button>
`;

exports[`Button icon 1`] = `
<button
  class="t-button t-button--type-default t--size-m t-button--icon-l"
>
  <i
    class="t-icon t-button__icon"
    role="img"
  >
    <svg
      viewBox="0 0 1024 1024"
    >
      <path
        d="M808.12630286 92.94690423l-81.20590149-81.20590149-500.29730201 500.52713049 500.25899727 500.02916876 81.24420623-81.28251096-419.01479101-418.78496257z"
        fill="currentColor"
      />
    </svg>
  </i>
  <span>
    foo bar
  </span>
</button>
`;

exports[`Button loading 1`] = `
<button
  class="t-button t-button--type-default t--size-m t-button--loading t-button--icon-l"
>
  <i
    class="t-icon t-collapse-transition t-button__icon t-collapse-transition--w"
    role="img"
  >
    <svg
      class="t-loading-icon"
      viewBox="0 0 66 66"
    >
      <circle
        class="t-loading-icon__path"
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="6"
      />
    </svg>
  </i>
  <span>
    foo bar
  </span>
</button>
`;

exports[`Button loading icon 1`] = `
<button
  class="t-button t-button--type-default t--size-m t-button--loading t-button--icon-l"
>
  <i
    class="t-icon t-button__icon"
    role="img"
  >
    <svg
      class="t-loading-icon"
      viewBox="0 0 66 66"
    >
      <circle
        class="t-loading-icon__path"
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="6"
      />
    </svg>
  </i>
  <span>
    foo bar
  </span>
</button>
`;

exports[`Button loading right-icon 1`] = `
<button
  class="t-button t-button--type-default t--size-m t-button--loading t-button--icon-r"
>
  <span>
    foo bar
  </span>
  <i
    class="t-icon t-collapse-transition t-button__icon t-collapse-transition--w"
    role="img"
  >
    <svg
      class="t-loading-icon"
      viewBox="0 0 66 66"
    >
      <circle
        class="t-loading-icon__path"
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-width="6"
      />
    </svg>
  </i>
</button>
`;

exports[`Button right-icon 1`] = `
<button
  class="t-button t-button--type-default t--size-m t-button--icon-r"
>
  <span>
    foo bar
  </span>
  <i
    class="t-icon t-button__icon"
    role="img"
  >
    <svg
      viewBox="0 0 1024 1024"
    >
      <path
        d="M808.12630286 92.94690423l-81.20590149-81.20590149-500.29730201 500.52713049 500.25899727 500.02916876 81.24420623-81.28251096-419.01479101-418.78496257z"
        fill="currentColor"
      />
    </svg>
  </i>
</button>
`;
